Fix definitivo de CORS en Spring Security para Railway